--- a/Middleware with React v14/style/style.css
+++ b/Middleware with React v14/style/style.css
@@ -7,3 +7,9 @@
   width: 30%;
   min-width: 300px;
 }
+.center-me {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
